Fix CSS inline styles and button accessibility - moved inline styles to external CSS file and added title attribute to sidebar toggle button

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </div>
 
     <!-- Main Application Container -->
-    <div id="app" class="app-container" style="display: none;">
+    <div id="app" class="app-container">
         <!-- Navigation Header -->
         <header class="header">
             <div class="header-left">
-                <button id="sidebar-toggle" class="sidebar-toggle">
+                <button id="sidebar-toggle" class="sidebar-toggle" title="Toggle sidebar navigation">
                     <i class="fas fa-bars"></i>
                 </button>
                 <h1 class="app-title">Agentic CRM</h1>
